--- a/docs/index.css
+++ b/docs/index.css
@@ -12,22 +12,23 @@ body {
 }
 
 input[type="text"], textarea {
-    width: 100%;
-    margin: 0px;
     border: none;
     font-size: 1.2em;
+    margin: 0px;
+    width: 100%;
 }
 
 textarea {
+    min-height: 100px;
     resize: vertical;
 }
 
 input[type="checkbox"] {
-    width: 20px;
+    background-color: #FFFFFF;
+    border: 2px solid #808080;
     height: 20px;
     margin: 5px;
-    border: 2px solid #808080;
-    background-color: #FFFFFF;
+    width: 20px;
 }
 
     input[type="checkbox"]:checked {
@@ -39,8 +40,8 @@ input[type="checkbox"] {
     }
 
     input[type="checkbox"] ~ label {
-        position: relative;
         top: -9px;
+        position: relative;
     }
 
 @media (min-width: 600px) {
@@ -86,43 +87,43 @@ input[type="checkbox"] {
 /* ----- Colors ------------------------------------------------------------ */
 
 .green {
-    color: #FFFFFF;
     background-color: #009323;
+    color: #FFFFFF;
 }
 
 .blue {
-    color: #FFFFFF;
     background-color: #2463C9;
+    color: #FFFFFF;
 }
 
 .red {
-    color: #FFFFFF;
     background-color: #FF5555;
+    color: #FFFFFF;
 }
 
 /* ----- Navigation Bar ---------------------------------------------------- */
 
 .navbar {
-    height: 60px;
     background-color: #F8F8F8;
+    height: 60px;
 }
 
     .navbar .title {
-        font-weight: bold;
+        color: #5E5E5E;
         font-size: 1.2em;
+        font-weight: bold;
         margin: 0px;
         padding: 19px 2px;
-        color: #5E5E5E;
     }
 
     .navbar > .left {
-        margin-left: 10px;
         float: left;
+        margin-left: 10px;
     }
 
     .navbar > .right {
-        margin-right: 10px;
         float: right;
+        margin-right: 10px;
     }
 
     .navbar > .clear {
@@ -146,12 +147,12 @@ input[type="checkbox"] {
 /* ----- Buttons ----------------------------------------------------------- */
 
 button {
+    border: none;
     font-weight: bold;
     height: 40px;
     margin: 0px;
-    padding: 0px 15px;
-    border: none;
     opacity: 0.7;
+    padding: 0px 15px;
 }
 
     button:hover {
@@ -177,9 +178,9 @@ button {
 /* ----- Containers -------------------------------------------------------- */
 
 .container {
+    background-color: #EEEEEE;
     margin: 20px 0px;
     padding: 10px;
-    background-color: #EEEEEE;
 }
 
 @media (min-width: 600px) {
@@ -190,15 +191,15 @@ button {
 }
 
 .container.footer {
-    margin: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
     background-color: #FFFFFF;
+    margin: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
 }
 
     .container.footer p {
-        font-size: 0.8em;
         color: #808080;
+        font-size: 0.8em;
     }
 
 /* ----- Pagination -------------------------------------------------------- */
@@ -212,8 +213,8 @@ button {
     }
 
         .pagination button.active {
-            color: #FFFFFF;
             background-color: #2463C9;
+            color: #FFFFFF;
             opacity: 1;
         }
 
@@ -226,13 +227,13 @@ table {
 /* ----- Popups ------------------------------------------------------------ */
 
 .popup-container {
+    background-color: #00000055;
     display: none;
+    height: 100%;
+    left: 0px;
     position: fixed;
     top: 0px;
-    left: 0px;
     width: 100%;
-    height: 100%;
-    background-color: #00000055;
 }
 
     .popup-container.open {
@@ -240,16 +241,16 @@ table {
     }
 
 .popup {
-    width: 500px;
-    margin: 40px auto;
-    padding: 25px;
     background-color: #FFFFFF;
+    margin: 40px auto;
     opacity: 1;
+    padding: 25px;
+    width: 60%;
 }
 
     .popup h1, .popup h2, .popup h3, .popup h4, .popup h5, .popup h6 {
-        margin: 0px;
         border-bottom: 1px solid #808080;
+        margin: 0px;
     }
 
 @media (max-width: 599px) {
