--- a/docs/index.css
+++ b/docs/index.css
@@ -19,7 +19,7 @@ input[type="text"], textarea {
 }
 
 textarea {
-    min-height: 100px;
+    min-height: 150px;
     resize: vertical;
 }
 
@@ -43,6 +43,10 @@ input[type="checkbox"] {
         top: -9px;
         position: relative;
     }
+
+pre {
+    overflow-x: auto;
+}
 
 @media (min-width: 600px) {
     h1 {
@@ -69,7 +73,7 @@ input[type="checkbox"] {
         font-size: 1.005em;
     }
 
-    p {
+    p, pre {
         font-size: 1.5em;
     }
 }
