--- a/docs/index.css
+++ b/docs/index.css
@@ -135,10 +135,10 @@ pre {
 button {
     border: none;
     font-weight: bold;
-    height: 40px;
+    height: 30px;
     margin: 0px;
     opacity: 0.7;
-    padding: 0px 15px;
+    padding: 0px 10px;
 }
 
     button:hover {
@@ -154,12 +154,24 @@ button {
     }
 
     button.large {
-        font-size: 1.2em;
+        font-size: 1.25em;
+        height: 45px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+@media (min-width: 600px) {
+    button {
+        height: 40px;
+        padding: 0px 15px;
+    }
+
+    button.large {
         height: 60px;
         padding-left: 25px;
         padding-right: 25px;
     }
-
+}
 
 /* ----- Containers -------------------------------------------------------- */
 
@@ -178,7 +190,7 @@ button {
 
         .container.footer p {
             color: #808080;
-            font-size: 0.8em;
+            font-size: 0.7em;
         }
 
 @media (min-width: 600px) {
@@ -186,6 +198,11 @@ button {
         padding-left: 10%;
         padding-right: 10%;
     }
+
+        .container.footer p {
+            color: #808080;
+            font-size: 0.8em;
+        }
 }
 
 /* ----- Pagination -------------------------------------------------------- */
